<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_select"
        android:title="@string/action_select"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort_tags"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_tags"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_list"
        android:title="@string/sort_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_theme"
        android:title="@string/theme"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_color"
        android:title="@string/color_theme"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_trash"
        android:title="@string/trash"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:title="@string/export_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_md"
        android:title="@string/export_all_markdown"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:title="@string/import_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_md"
        android:title="@string/import_markdown"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_auto_backup"
        android:title="@string/auto_backup"
        app:showAsAction="never" />

</menu>
